--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -18,7 +18,7 @@ jobs:
           aws-region: ap-northeast-1
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
       - name: check
-        uses: ls -la
+        run: ls -la
       - name: PR Agent action step
         uses: qodo-ai/pr-agent@main
         env:
